
v8.3.0
======

- WL#16015: Remove use of removed COM_ commands
- WL#15983: Stop using mysql_ssl_set api
- WL#15982: Remove use of mysql_shutdown
- WL#15942: Improve type hints and standardize byte type handling
- WL#15523: Support Python DB API asynchronous execution
- BUG#35912790: Binary strings are converted when using prepared statements
- BUG#35710145: Bad MySQLCursor.statement and result when query text contains code comments

v8.2.0
======

- WL#15664: Add support for Python 3.12
- WL#15623: Improve the authentication module
- WL#15218: Support WebAuthn authentication
- BUG#35755852: Django config raise_on_warnings is ignored without isolation_level
- BUG#35733608: Server stmt spans right after the cnx aren't related to the connector's cnx span
- BUG#35547876: C/Python 8.1.0 type check build fails in the pb2 branch
- BUG#35544123: Kerberos unit tests configuration is outdated
- BUG#35503506: Query on information_schema.columns returns bytes
- BUG#35503377: First connected to server v8, then any v5 connections fail with utf8mb4 charset
- BUG#35141645: Memory leak in the mysqlx C extension

v8.1.0
======

- WL#15749: Remove DMG and MSI support
- WL#15672: Upgrade Python Protobuf version to 4.21.12
- WL#15630: Remove Python 3.7 support
- WL#15629: Add OpenTelemetry tracing
- WL#15591: Improve the network module
- BUG#35425076: Fix deallocating None error
- BUG#35349093: Compression doesn't work with C extension API
- BUG#35338384: PIP installs incompatible Connector/Python packages
- BUG#35318413: Fix charset mapping for MySQL 8.1.0
- BUG#35278365: Fix UnicodeDecodeError with a long field name alias (c-ext)
- BUG#35212199: Check for identifier quotes in the database name
- BUG#35140271: Regex split hanging in cursor.execute(..., multi=True) for complex queries
- BUG#29115406: CONTRIBUTION - FIX RECV COMPRESS BUG

v8.0.33
=======

- WL#15528: Add docker build/test support for existing server
- WL#15483: Support OCI ephemeral key-based authentication